Improvements for jav-packaging, logging, outputs & readme